--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -7,6 +7,10 @@ prepare:
       path: rails_rubocop.yml
 
 engines:
+  structure:
+    enabled: false
+  duplication:
+    enabled: false
   rubocop:
     enabled: true
     exclude_paths:
